[gd_scene load_steps=12 format=2]

[ext_resource path="res://fase_ensinomedio/fase_escolha/nodrink_1.png" type="Texture" id=1]
[ext_resource path="res://fase_ensinomedio/fase_escolha/nodrink_2.png" type="Texture" id=2]
[ext_resource path="res://fase_ensinomedio/fase_escolha/nodrink_3.png" type="Texture" id=3]
[ext_resource path="res://escolhas/fundo.png" type="Texture" id=4]
[ext_resource path="res://cenas_node/escolha_ruim.gd" type="Script" id=5]
[ext_resource path="res://fase_ensinomedio/fase_escolha/drink1.png" type="Texture" id=6]
[ext_resource path="res://fase_ensinomedio/fase_escolha/drink2.png" type="Texture" id=7]
[ext_resource path="res://fase_ensinomedio/fase_escolha/drink3.png" type="Texture" id=8]
[ext_resource path="res://cenas_node/Button2.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="Node2D" type="Node2D"]
position = Vector2( 176, 136 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -177.0
margin_top = -138.0
margin_right = 847.0
margin_bottom = 463.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_boa" type="Button" parent="."]
margin_left = -174.0
margin_top = -133.0
margin_right = 334.0
margin_bottom = 465.0
flat = true
script = ExtResource( 9 )

[node name="boa" type="AnimatedSprite" parent="btn_boa"]
position = Vector2( 269.82, 298.938 )
scale = Vector2( 0.358975, 0.506771 )
frames = SubResource( 2 )
frame = 2
playing = true

[node name="btn_ruim" type="Button" parent="."]
margin_left = 330.0
margin_top = -135.0
margin_right = 849.0
margin_bottom = 464.0
flat = true
script = ExtResource( 5 )

[node name="ruim" type="AnimatedSprite" parent="btn_ruim"]
position = Vector2( 257.101, 291 )
scale = Vector2( 0.341376, 0.508333 )
frames = SubResource( 1 )
frame = 1
playing = true

[connection signal="mouse_entered" from="btn_boa" to="btn_boa" method="_on_btn_boa_mouse_entered"]
[connection signal="mouse_exited" from="btn_boa" to="btn_boa" method="_on_btn_boa_mouse_exited"]
[connection signal="pressed" from="btn_boa" to="btn_boa" method="_on_btn_boa_pressed"]
[connection signal="mouse_entered" from="btn_ruim" to="btn_ruim" method="_on_btn_ruim_mouse_entered"]
[connection signal="mouse_exited" from="btn_ruim" to="btn_ruim" method="_on_btn_ruim_mouse_exited"]
[connection signal="pressed" from="btn_ruim" to="btn_ruim" method="_on_Button_pressed"]
